functioning API and Blog pages

--- a/data/posts/futurama.mdx
+++ b/data/posts/futurama.mdx
@@ -1,6 +1,6 @@
 ---
 title: Futurama Stuff
-date: 20024-04-23
+date: 2024-04-23
 tags:
   - tv
   - script
@@ -14,7 +14,7 @@ Of all the friends I've had… you're the first. I'll get my kit! Tell her she l
 
 ## I am the man with no name, Zapp Brannigan!
 
-Stop it, stop it. It's fine. I will 'destroy' you! I found what I need. And it's not friends, it's things. Why yes! Thanks for noticing.
+Stop it, stop it. It's fine. I will 'destroy' you! I found what I need. And it's not friends, it's things. Why yes!
 
 1. Come, Comrade Bender! We must take to the streets!
 2. Yes. You gave me a dollar and some candy.
